--- a/Engine/Material/Engine-Material.vcxproj
+++ b/Engine/Material/Engine-Material.vcxproj
@@ -19,34 +19,34 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
+    <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{2fe04adc-89fb-4e2b-ae65-fd6743e7344e}</ProjectGuid>
-    <RootNamespace>ShizenEngine</RootNamespace>
+    <ProjectGuid>{079b918f-e9b0-4ba3-8027-08ed497f4628}</ProjectGuid>
+    <RootNamespace>EngineMaterial</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -56,8 +56,8 @@
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="Shared">
-    <Import Project="..\Platforms\Common\Platforms-Common.vcxitems" Label="Shared" />
-    <Import Project="..\Primitives\Primitives.vcxitems" Label="Shared" />
+    <Import Project="..\..\Platforms\Common\Platforms-Common.vcxitems" Label="Shared" />
+    <Import Project="..\..\Primitives\Primitives.vcxitems" Label="Shared" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -72,27 +72,18 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <LinkIncremental>true</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>
+      </SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -102,13 +93,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
-      <EnableCOMDATFolding>true</EnableCOMDATFolding>
-      <OptimizeReferences>true</OptimizeReferences>
+      <SubSystem>
+      </SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -116,11 +108,14 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>
+      </SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -130,73 +125,41 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
-      <EnableCOMDATFolding>true</EnableCOMDATFolding>
-      <OptimizeReferences>true</OptimizeReferences>
+      <SubSystem>
+      </SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="FirstPersonCamera.h" />
-    <ClInclude Include="ShizenEngine.h" />
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="Public\MaterialInstance.h" />
+    <ClInclude Include="Public\MaterialTemplate.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="FirstPersonCamera.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="ShizenEngine.cpp" />
+    <ClCompile Include="pch.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="Private\MaterialInstance.cpp" />
+    <ClCompile Include="Private\MaterialTemplate.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Engine\AssetRuntime\Engine-AssetRuntime.vcxproj">
+    <ProjectReference Include="..\AssetRuntime\Engine-AssetRuntime.vcxproj">
       <Project>{505d73a4-5365-4527-b263-3c10be6d839b}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\Engine\Core\Engine-Core.vcxproj">
+    <ProjectReference Include="..\Core\Engine-Core.vcxproj">
       <Project>{c901be66-8350-4df9-8576-50ce5f052836}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\Engine\GraphicsArchiver\Engine-GraphicsArchiver.vcxproj">
-      <Project>{56281a9e-af63-4c08-acee-3e619e8ea440}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Engine\GraphicsTools\Engine-GraphicsTools.vcxproj">
-      <Project>{d00159aa-bdd4-46e5-9f2a-ee4574b45379}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Engine\GraphicsUtils\Engine-GraphicsUtils.vcxproj">
-      <Project>{5bd3cd7e-f27f-43b2-8bca-b9ce3047b507}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Engine\ImGui\Engine-ImGui.vcxproj">
-      <Project>{7f85a29a-8214-48e6-9531-db5a4d102df5}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Engine\Material\Engine-Material.vcxproj">
-      <Project>{079b918f-e9b0-4ba3-8027-08ed497f4628}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Engine\Renderer\Engine-Renderer.vcxproj">
-      <Project>{434146a2-c1af-4d85-8e9b-2faf1727b469}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Engine\RHI\Engine-RHI.vcxproj">
+    <ProjectReference Include="..\RHI\Engine-RHI.vcxproj">
       <Project>{945ab006-8bd2-442f-822d-2b72abf5ed6c}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Engine\RHI_D3D12\Engine-RHI-D3D12.vcxproj">
-      <Project>{3e258117-8c7c-494f-9d61-1629a0f7400d}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Engine\RHI_D3DBase\Engine-RHI-D3DBase.vcxproj">
-      <Project>{b73c511f-83c2-4a94-8f45-c8bc3cd819b6}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Engine\ShaderTools\Engine-ShaderTools.vcxproj">
-      <Project>{59d7e47f-9aaf-4e70-9c3d-2195af7f7aef}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Platforms\Basic\Platforms-Basic.vcxproj">
-      <Project>{9064164c-970f-4494-88c6-4cb710c1d714}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Platforms\Win64\Platforms-Win64.vcxproj">
-      <Project>{33e167c2-6555-4601-b556-df06e1328c1b}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\ThirdParty\imgui\imgui.vcxproj">
-      <Project>{c754f36d-acdb-4092-a591-29998b76d79d}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Tools\Image\Tools-Image.vcxproj">
-      <Project>{5b44506a-9b58-4488-a48f-52044bfd19c8}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
