--- a/Engine/AssetRuntime/Engine-AssetRuntime.vcxproj
+++ b/Engine/AssetRuntime/Engine-AssetRuntime.vcxproj
@@ -153,10 +153,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Public\AssetId.h" />
+    <ClInclude Include="Public\AssetManagerImpl.h" />
+    <ClInclude Include="Public\AssetID.hpp" />
     <ClInclude Include="Public\AssetManager.h" />
     <ClInclude Include="Public\AssetObject.h" />
+    <ClInclude Include="Public\AssetPtr.hpp" />
+    <ClInclude Include="Public\AssetRecord.h" />
+    <ClInclude Include="Public\AssetRef.hpp" />
+    <ClInclude Include="Public\AssetRegistry.h" />
+    <ClInclude Include="Public\AssetTypeTraits.h" />
     <ClInclude Include="Public\AssimpImporter.h" />
+    <ClInclude Include="Public\EAssetStatus.h" />
+    <ClInclude Include="Public\IAssetManager.h" />
     <ClInclude Include="Public\MaterialInstanceAsset.h" />
     <ClInclude Include="Public\StaticMeshAsset.h" />
     <ClInclude Include="Public\TextureAsset.h" />
@@ -169,7 +177,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Private\AssetManager.cpp" />
-    <ClCompile Include="Private\AssetObject.cpp" />
+    <ClCompile Include="Private\AssetManagerImpl.cpp" />
     <ClCompile Include="Private\AssimpImporter.cpp" />
     <ClCompile Include="Private\StaticMeshAsset.cpp" />
     <ClCompile Include="Private\TextureAsset.cpp" />
