--- a/Engine/Renderer/Engine-Renderer.vcxproj
+++ b/Engine/Renderer/Engine-Renderer.vcxproj
@@ -152,6 +152,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Public\RendererMaterialStaticBinder.h" />
+    <ClInclude Include="Public\IMaterialStaticBinder.h" />
     <ClInclude Include="Public\RenderResourceCache.h" />
     <ClInclude Include="Public\MaterialRenderData.h" />
     <ClInclude Include="Public\Renderer.h" />
@@ -169,6 +171,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Private\MaterialRenderData.cpp" />
+    <ClCompile Include="Private\RendererMaterialStaticBinder.cpp" />
     <ClCompile Include="Private\Renderer.cpp" />
     <ClCompile Include="Private\RenderResourceCache.cpp" />
     <ClCompile Include="Private\RenderScene.cpp" />
