--- a/Engine/Renderer/Engine-Renderer.vcxproj.filters
+++ b/Engine/Renderer/Engine-Renderer.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClInclude Include="Public\TextureRenderData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Public\RendererMaterialStaticBinder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Public\IMaterialStaticBinder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -63,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Private\StaticMeshRenderData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Private\RendererMaterialStaticBinder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
