ADD: Material Asset

--- a/Engine/AssetRuntime/Engine-AssetRuntime.vcxproj
+++ b/Engine/AssetRuntime/Engine-AssetRuntime.vcxproj
@@ -165,7 +165,7 @@
     <ClInclude Include="Public\AssimpImporter.h" />
     <ClInclude Include="Public\EAssetStatus.h" />
     <ClInclude Include="Public\IAssetManager.h" />
-    <ClInclude Include="Public\MaterialInstanceAsset.h" />
+    <ClInclude Include="Public\MaterialAsset.h" />
     <ClInclude Include="Public\StaticMeshAsset.h" />
     <ClInclude Include="Public\TextureAsset.h" />
   </ItemGroup>
@@ -179,6 +179,7 @@
     <ClCompile Include="Private\AssetManagerBase.cpp" />
     <ClCompile Include="Private\AssetManager.cpp" />
     <ClCompile Include="Private\AssimpImporter.cpp" />
+    <ClCompile Include="Private\MaterialAsset.cpp" />
     <ClCompile Include="Private\StaticMeshAsset.cpp" />
     <ClCompile Include="Private\TextureAsset.cpp" />
   </ItemGroup>
