--- a/Engine/Material/Engine-Material.vcxproj.filters
+++ b/Engine/Material/Engine-Material.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Public\MaterialInstance.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Public\MaterialTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
