--- a/Engine/AssetRuntime/Engine-AssetRuntime.vcxproj.filters
+++ b/Engine/AssetRuntime/Engine-AssetRuntime.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClInclude Include="AssetData\Public\TextureAsset.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AssetManager\Public\AssetManagerBase.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Common\AssetID.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -67,6 +64,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Pipeline\Public\StaticMeshImporter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AssetManager\Public\AssetMeta.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
