ADD: Environment mapping

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore everything under Assets/Cubemap
+/Assets/Cubemap/**
+
 # Created by https://www.toptal.com/developers/gitignore/api/c++,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,visualstudio
 
