--- a/App/MaterialEditor/App-MaterialEditor.vcxproj
+++ b/App/MaterialEditor/App-MaterialEditor.vcxproj
@@ -53,6 +53,9 @@
     <ProjectReference Include="..\..\Engine\Renderer\Engine-Renderer.vcxproj">
       <Project>{434146a2-c1af-4d85-8e9b-2faf1727b469}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\Engine\RenderPass\Engine-RenderPass.vcxproj">
+      <Project>{9e437443-630f-4ebf-ac14-9c6c17c6f7fd}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\Engine\RHI\Engine-RHI.vcxproj">
       <Project>{945ab006-8bd2-442f-822d-2b72abf5ed6c}</Project>
     </ProjectReference>
