--- a/Engine/Core/Engine-Core.vcxproj
+++ b/Engine/Core/Engine-Core.vcxproj
@@ -141,7 +141,6 @@
   <ItemGroup>
     <ClInclude Include="Common\Public\DebugOutput.h" />
     <ClInclude Include="Common\Public\Errors.hpp" />
-    <ClInclude Include="Math\AdvancedMath.h" />
     <ClInclude Include="Common\Public\Array2DTools.hpp" />
     <ClInclude Include="Common\Public\AsyncInitializer.hpp" />
     <ClInclude Include="Common\Public\BasicFileStream.hpp" />
@@ -151,6 +150,9 @@
     <ClInclude Include="Common\Public\Cast.hpp" />
     <ClInclude Include="Math\Public\Box.h" />
     <ClInclude Include="Math\Public\Matrix2x2.h" />
+    <ClInclude Include="Math\Public\OrientedBox.h" />
+    <ClInclude Include="Math\Public\Plane.h" />
+    <ClInclude Include="Math\Public\ViewFrustum.h" />
     <ClInclude Include="Memory\Public\DataBlobImpl.hpp" />
     <ClInclude Include="Memory\Public\DefaultRawMemoryAllocator.hpp" />
     <ClInclude Include="Common\Public\DummyReferenceCounters.hpp" />
