--- a/Engine/Core/Engine-Core.vcxproj.filters
+++ b/Engine/Core/Engine-Core.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Math\AdvancedMath.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Common\Public\Array2DTools.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -235,6 +232,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Common\Public\Errors.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\Public\ViewFrustum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\Public\Plane.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\Public\OrientedBox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
