--- a/Engine/RenderPass/Engine-RenderPass.vcxproj.filters
+++ b/Engine/RenderPass/Engine-RenderPass.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Public\PostRenderPass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Public\DrawPacket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
