ADD: Add profiling(draw call count of each render passes)

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -48,6 +48,7 @@
 			<PreprocessorDefinitions>
 				PLATFORM_WIN32;
 				D3D12_SUPPORTED;
+				PROFILING;
 				NOMINMAX;
 				%(PreprocessorDefinitions)
 			</PreprocessorDefinitions>
