--- a/App/MaterialEditor/App-MaterialEditor.vcxproj.filters
+++ b/App/MaterialEditor/App-MaterialEditor.vcxproj.filters
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ClInclude Include="MaterialEditor.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
