--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -90,8 +90,7 @@
 	<!-- Additional linker dependencies for **Samples** projects   -->
 	<!-- ========================================================= -->
 	<ItemDefinitionGroup
-	  Condition="$([System.String]::Copy('$(MSBuildProjectFullPath)').Contains('\Samples\')) Or
-             $([System.String]::Copy('$(MSBuildProjectFullPath)').Contains('\App\')) Or
+	  Condition="$([System.String]::Copy('$(MSBuildProjectFullPath)').Contains('\App\')) Or
              '$(MSBuildProjectName)' == 'ShizenEngine'">
 		<Link>
 			<AdditionalDependencies>
