--- a/Engine/Renderer/Engine-Renderer.vcxproj
+++ b/Engine/Renderer/Engine-Renderer.vcxproj
@@ -155,15 +155,13 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="Public\PipelineStateManager.h" />
+    <ClInclude Include="Public\RenderData.h" />
     <ClInclude Include="Public\RendererMaterialStaticBinder.h" />
     <ClInclude Include="Public\IMaterialStaticBinder.h" />
-    <ClInclude Include="Public\RenderResourceCache.h" />
-    <ClInclude Include="Public\MaterialRenderData.h" />
+    <ClInclude Include="Public\RenderResourceCache.hpp" />
     <ClInclude Include="Public\Renderer.h" />
     <ClInclude Include="Public\RenderScene.h" />
     <ClInclude Include="Public\RenderTarget.h" />
-    <ClInclude Include="Public\StaticMeshRenderData.h" />
-    <ClInclude Include="Public\TextureRenderData.h" />
     <ClInclude Include="Public\ViewFamily.h" />
   </ItemGroup>
   <ItemGroup>
@@ -173,14 +171,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Private\MaterialRenderData.cpp" />
     <ClCompile Include="Private\PipelineStateManager.cpp" />
     <ClCompile Include="Private\RendererMaterialStaticBinder.cpp" />
     <ClCompile Include="Private\Renderer.cpp" />
-    <ClCompile Include="Private\RenderResourceCache.cpp" />
     <ClCompile Include="Private\RenderScene.cpp" />
-    <ClCompile Include="Private\StaticMeshRenderData.cpp" />
-    <ClCompile Include="Private\TextureRenderData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
